added redux tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "test": "DATABASE_URL=postgres://localhost/acme_schools_test nodemon ./node_modules/mocha/bin/mocha",
+    "test:data": "DATABASE_URL=postgres://localhost/acme_schools_test nodemon ./node_modules/mocha/bin/mocha ./test/db-specs.js",
+    "test:client:redux": "nodemon ./node_modules/mocha/bin/mocha --require babel-core/register  ./test/redux-specs.js",
     "postinstall": "npm run webpack",
     "webpack": "webpack",
     "build": "npm run webpack -- --watch --mode=development",
@@ -30,12 +31,14 @@
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "pg": "^7.4.3",
@@ -46,8 +49,10 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.1",
+    "sinon": "^6.3.5",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   }
